[package]
name = "premain-libos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.26.2"
prost = "0.11.8"
rcgen = "0.10.0"
time = "0.3.20"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "net"]}
tonic = { version = "0.8.3", features = ["tls"] }
url = "2.3.1"

[build-dependencies]
tonic-build = "0.8.3"
